--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -64,6 +64,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 # Virtual memory code.
 vm_SRC  = vm/frametab.c           # Frame table.
 vm_SRC += vm/pagetab.c            # Supplemental page table.
+vm_SRC += vm/swaptab.c            # Swap table.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
